# nmea-gps-emulator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  auxiliary_funcs.py  constants.py  custom_thread.py  gnss_emulator.py  input_funcs.py  main.py  nmea_gps.py  pyproject.toml  requirements.txt  setup.py  test_nmea.py  utils.py
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci-multiplatform.yml  ci.yml  codeql.yml  pr-validation.yml  release.yml
src/nmea_gps_emulator/: __init__.py  __main__.py  constants.py  custom_thread.py  main.py  nmea_gps.py  types.py  utils.py  validators.py
tests/: __init__.py  test_cli_integration.py  test_cli_parsing.py  test_input_validation.py  test_nmea.py  test_tcp_server_socket.py
