[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "nmea-gps-emulator"
dynamic = ["version"]
description = "A GPS receiver emulator that generates NMEA 0183 sentences"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "luk-kop" },
]
keywords = ["nmea", "gps", "emulator", "navigation", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: System :: Emulators",
]
dependencies = [
    "psutil>=7.2",
    "pyproj>=3.7",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "build>=1.5",
    "hypothesis>=6.0",
    "mypy>=2.1",
    "pip-audit>=2.10",
    "pre-commit>=4.6",
    "pytest>=9.0",
    "pytest-cov>=7.1",
    "ruff>=0.15",
]

[project.scripts]
nmea-gps-emulator = "nmea_gps_emulator.__main__:main"

[project.urls]
Homepage = "https://github.com/luk-kop/nmea-gps-emulator"
Repository = "https://github.com/luk-kop/nmea-gps-emulator"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "N", "I", "UP", "S", "D", "B", "A", "C4", "SIM"]
ignore = [
    "S311",  # S311: random is fine for non-crypto use
    "D203",  # D203 conflicts with Ruff formatter; use D211 instead
    "D212",  # Prefer multi-line docstring summaries on the second line (D213)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D102", "S104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/nmea_gps_emulator/_version.py"
